o Updated to built using Maven 3. o Updated references to Sourceforge hosting services with references to dedicated hosting services.
Closes #9
See #1

git-svn-id: http://svn.jdtaus.org/svnroot/jdtaus/jdtaus-core/branches/jdtaus-core-1.x@8640 d3f52c91-230f-0410-802c-e3ec080d4bae